2016-03-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (findnextfile): Trim a duplicate variable.

2016-03-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_writeout), src/nano.c (do_exit): Normalize the
	punctuation in some prompts: no space before a question mark, and
	a semicolon instead of a comma between phrases.
	* src/text.c (do_cutword): Don't put cut words into the cutbuffer --
	that is: treat the deletion of words like pressing Backspace/Delete.
	* src/search.c (get_history_completion, find_history): Cycle through
	the items from newest to oldest.  This fixes Savannah bug #47205.
	* src/files.c (do_writeout): When the name of the file was changed,
	always ask whether this is okay.  This fixes Savannah bug #46894.
	* src/search.c (do_research): Use 'return' instead of 'else'.
	* src/search.c (do_search): Don't bother setting 'answer'; just	use
	'last_search', which has been set to 'answer' in search_init().
	* src/search.c (go_looking): Factor out the common part of
	do_search() and do_research() into this new function.

2016-03-19  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (search_init): Always remember the last typed string,
	also when it's an invalid regex.  This fixes Savannah bug #47440.
	* src/search.c (search_init, do_replace): Don't bother setting the
	current answer to the empty string, as do_prompt() can handle a NULL.
	* src/browser.c (do_browser): Delete a snippet of dead code.
	* src/browser.c (do_browser): Delete an unneeded variable.
	* src/search.c (do_gotolinecolumn): Delete another unneeded variable.
	* src/search.c (search_init): Snip an always-FALSE condition.
	* src/search.c (search_init): Reshuffle stuff to reduce indentation.
	* src/search.c (do_replace): Snip a useless setting of answer.

2016-03-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_research): Use the Search key bindings also during
	a Re-search, to enable cancelling.  This fixes Savannah bug #47159.