@@ -1,5 +1,6 @@
 2016-03-21  Benno Schulenberg  <bensberg@justemail.net>
 	* src/browser.c (findnextfile): Trim a duplicate variable.
+	* src/browser.c (browser_refresh, findnextfile): Rename four vars.
 
 2016-03-20  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (do_writeout), src/nano.c (do_exit): Normalize the
